--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,7 @@ img {
 .site-header{
   position: sticky;
   top: 0;
+  z-index: 999;
 }
 
 ul,ol,li{
@@ -398,6 +399,199 @@ a{
 /* ******* VETERINAR SECTION END ***** */
 
 /* ***** OUR SERVICES START **** */
+.our-services {
+  padding-bottom: 235px;
+}
+.container {
+}
+.our-services-title {
+  margin-top: 0;
+  margin-bottom: 80px;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 54px;
+  text-align: center;
+  color: var(--main-text-color);
+}
 
+.our-services-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.arrow-left{
+  width: 50px;
+  height: 50px;
+  padding: 12px 18px;
+  background-color: transparent;
+  cursor: pointer;
+  margin-right: 30px;
+}
+
+.arrow-left:last-child{
+  margin-left: 30px;
+}
+
+.arrow-left:hover{
+  width: 50px;
+  height: 50px;
+  padding: 12px 18px;
+  background-color: var(--header-bg-color);
+}
+
+.arrow-left:active{
+  width: 50px;
+  height: 50px;
+  padding: 12px 18px;
+  background-color: #FDFDFD;
+}
+
+.our-services-list {
+  display: flex;
+  width: 100%;
+  max-width: 1223px;
+  justify-content: space-between;
+  /* align-items: center; */
+  gap: 13px;
+  margin: 0;
+}
+.our-services-item {
+  width: 100%;
+  max-width: 193px;
+  height: 100%;
+  min-height: 201px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 30px 32px 28px 35px;
+  background-color: var(--header-bg-color);
+  border: 1px solid #F3F3F3;
+  border-radius: 5px;
+}
+
+.padding{
+  height: 215px;
+  padding-bottom: 43px;
+  border-radius: 5px 5px 0px 0px;
+  border: none;
+  
+}
+
+.our-services-item-img {
+  margin-bottom: 22px;
+}
+.our-services-item-title {
+  width: 100%;
+  max-width: 126px;
+  margin: 0;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  color: var(--main-text-color);
+}
+
+.our-services-bottom{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 42px 105px 41px 35px;
+  margin-left: 80px;
+  margin-right: 110px;
+  background-color: var(--header-bg-color);
+  border-radius: 0px 5px 5px 5px;
+}
+
+.our-services-bottom-img{
+  border-radius: 5px;
+  margin-right: 40px;
+}
+
+.our-services-bottom-left-title {
+  margin-top: 0;
+  margin-bottom: 18px;
+  font-size: 36px;
+  line-height: 20px;
+  color: var(--main-text-color);
+}
+.our-services-bottom-left-subtitle {
+  width: 100%;
+  max-width: 492px;
+  margin-top: 0;
+  margin-bottom: 9px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: var(--main-desc-color);
+}
+.subtitle2{
+  margin-bottom: 34px;
+}
+
+.our-services-bottom-left-btn-box {
+  display: flex;
+  align-items: center;
+  /* margin-top: 30px; */
+  gap: 21px;
+}
+.our-services-bottom-left-price {
+  display: flex;
+  align-items: center;
+  padding: 16px 30px;
+  background-color: var(--main-active-color);
+  border-radius: 3px;
+}
+
+.our-services-bottom-left-price:hover{
+  background-color: #ffbd54cc;
+}
+
+.our-services-bottom-left-price:active{
+  background-color: #ffbd5499;
+}
+.our-services-bottom-left-price-img {
+  width: 21px;
+  height: 21px;
+  margin-right: 6px;
+}
+.our-services-bottom-left-price-title {
+  margin: 0;
+  font-size: 16px;
+  line-height: 21px;
+  color: var(--header-bg-color);
+  
+}
+.our-services-bottom-left-docx {
+  display: flex;
+  align-items: center;
+  padding: 16px 30px;
+  border-radius: 3px;
+  background-color: var(--main-text-color);
+}
+
+.our-services-bottom-left-docx:hover{
+  background-color: #333333cc;
+}
+
+.our-services-bottom-left-docx:active{
+  background-color: #33333399;
+}
+.our-services-bottom-left-docx-img {
+  width: 21px;
+  height: 21px;
+  margin-right: 6px;
+}
+.our-services-bottom-left-docx-title {
+  margin: 0;
+  font-size: 16px;
+  line-height: 21px;
+  color: var(--header-bg-color);
+}
 /* ***** OUR SERVICES END **** */
+
+/******* NEWS SECTION START *******/
+
+/******* NEWS SECTION END *********/
 /* ***** SITE MAIN END **** */
